Changelog
=========


2.3.2 (unreleased)
------------------

- Nothing changed yet.


2.3.1 (2015-08-19)
------------------

- Add an `UnicodeCoercingText` TypeDecorator for the `Text` type that
  always returns unicode for values fetched from the DB. This allows
  us to have a guarantee to always receive unicode for `Text` types,
  even when using Oracle as the backend.
  The effect of this TypeDecorator should be the same as the cxOracle
  dialect option `coerce_to_unicode`, which unfortunately only affects
  `String` columns.
  [lgraf]


2.3.0 (2015-08-03)
------------------

- Add `active` column to `Group` model.
  (Corresponding upgrade-step is in opengever.ogds.base:default)
  [lgraf]

- Adapt imports for SQLAlchemy 1.x.
  [lgraf]


2.2.0 (2015-06-01)
------------------

- Factor out common column lengths into constants.
  [lgraf]

- Increase several column lengths in preparation for factoring out
  common column lengths to constants.
  (Corresponding upgrade-step is in opengever.ogds.base:default)
  [lgraf]

- Move extend_query_with_textfilter functionality to a separte method.
  [phgross]


2.1.0 (2015-03-12)
------------------

- Added query helper `by_searchable_text` to the BaseQuery.
  [phgross]


2.0.1 (2014-10-27)
------------------

- Harmonize column lengths of groupid and userid columns.
  [phgross]


2.0.0 (2014-10-24)
------------------

- Add `abbreviation` column to admin_unit table.
  [phgross]

- Add OGDSService which provides an entry point to query data.
  [phgross, deiferni]

- Add `OrgUnit` and `AdminUnit` model definitions, `OrgUnit` replaces `Client`.
  [phgross, deiferni]

- Move some functionality from `opengever.core` utility functions to methds on our model classes for better encapsulation.
  [phgross, deiferni]

- Add common base-class with query helper methods for all models.
  [phgross, deiferni]

- Add `ftw.builder` SQL-Builders for all model classes.
  [phgross, deiferni]


1.0.3 (2014-06-05)
------------------
